fixes width and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 body {
   font-family: "Karla", sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .navbar {
@@ -106,6 +107,7 @@ body {
   border-radius: 3px;
   max-height: 80dvh;
   width: max-content;
+  max-width: 80vw;
   margin: 17px;
 }
 
